<resources>
    <string name="title_activity_bluetooth_scan">Bluetooth Scan</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_export_database">Export database</string>
    <string name="menu_export_csv_sidiary">Export CSV (SiDiary format)</string>
    <string name="menu_import_db">Import database</string>
    <string name="error_bluetooth_not_supported">Error: Bluetooth not supported by this device</string>
    <string name="unknown_device">Unrecognized Device</string>
    <string name="connecting_to_device">Connecting to device</string>
    <string name="title_activity_raw_data_table">Raw Data Table</string>
    <string name="title_activity_calculated_data_table">Calculated Data Table</string>
    <string name="title_activity_start_new_sensor">Start New Sensor</string>
    <string name="title_activity_new_sensor_location">New Sensor Location</string>
    <string name="title_activity_stop_sensor">Stop Sensor</string>
    <string name="title_activity_nav_drawer">Nav Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_calibration_check_in">Calibration Activity</string>
    <string name="title_activity_usb_connected">Usb Connected Activity</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_hint">Snooze alert for x minutes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="pref_sensor_location_dont_ask_again"> Don\'t ask me that again</string>
    <string name="title_activity_error">"Error and Event List"</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_fake_numbers">Fake Numbers</string>
    <string name="title_activity_edit_alert">Edit Alert</string>
    <string name="title_activity_double_calibration">Double Calibration</string>
    <string name="title_activity_calibration_override">Calibration Override</string>
    <string name="pref_header_cloud_storage">Cloud Storage</string>
    <string name="auto_configure_title">Auto configure</string>
    <string name="prefs_auto_config_summary">Auto configure using a barcode.</string>
    <string name="scan_share2_barcode">Scan Share Barcode</string>
    <string name="pref_share2_scan_barcode_summary">Or scan the barcode on the share receiver</string>
    <string name="pref_title_mongodb">MongoDB</string>
    <string name="pref_summary_mongodb_enabled">If you\'re using MongoLab and Azure this should be enabled</string>
    <string name="pref_title_mongodb_uri">URI</string>
    <string name="pref_dialog_mongodb_uri">Enter MongoDB URI"</string>
    <string name="pref_message_mongodb_uri">Replace example values in {}\'s with your correct values</string>
    <string name="pref_default_mongodb_uri">mongodb://{user}:{password}@{host}.mongolab.com:{11111}/{database}</string>
    <string name="pref_title_mongodb_collection">Collection name</string>
    <string name="pref_dialog_mongodb_collection">Enter collection name</string>
    <string name="pref_message_mongodb_collection">This is the name of the collection where the CGM data will be stored</string>
    <string name="pref_title_mongodb_device_status_collection">Device Status collection name</string>
    <string name="pref_dialog_mongodb_device_status_collection">Enter Device Status collection name"</string>
    <string name="pref_message_mongodb_device_status_collection">This is the name of the collection where the battery and other device data will be stored</string>
    <string name="pref_title_api">API Upload (REST)</string>
    <string name="pref_title_api_enabled">Enabled</string>
    <string name="pref_summary_api_enabled">The REST API is an alternative to direct mongodb upload</string>
    <string name="pref_title_api_url">Base URL</string>
    <string name="pref_dialog_api_url">Enter Base API URL</string>
    <string name="pref_message_api_url">This only the base URL, the uploader will automatically append /entries for the POST.  API_SECRET on the server should match yourpassphrase in this setting.</string>
    <string name="pref_default_api_url">https://yourpassphrase@{YOUR-SITE}.azurewebsites.net/api/v1/</string>
    <string name="wifi_recievers_dialog_message">Comma separated list of ip:port (for example 37.142.132.220:50005,37.142.132.220:50010,mongodb://user:pass@ds053958.mongolab.com:53958/db/collection)</string>
    <string name="wifi_recievers_dialog_title">Enter ip addresses and ports of receivers (including mongodb addresses if needed)</string>
    <string name="location_not_found_title">Location Is Not Enabled</string>
    <string name="location_not_found_message">For Bluetooth discovery to work on newer devices, location must be enabled. xDrip does not track your location and it can be disabled after pairing is successful.</string>
    <string name="location_yes">Enable</string>
    <string name="pref_title_broadcast_enabled">Broadcast locally</string>
    <string name="pref_summary_broadcast_enabled">Enable local broadcast of data so other apps (eg. NightWatch) can listen on new values</string>
    <string name="title_activity_share_test">Share Test</string>
    <string name="pref_pebble_trend_watchface">Use Pebble Trend Watchface</string>
    <string name="pref_summary_pebble_trend_watchface">Use/install Pebble Trend Watchface (experimental)</string>
    <string name="pref_pebble_display_trend">Display Trend</string>
    <string name="pref_summary_display_trend">Show the BG trend on the xDrip Pebble watch face.</string>
    <string name="pref_pebble_display_high_line">Display High Line</string>
    <string name="pref_pebble_display_low_line">Display Low Line</string>
    <string name="toast_crash">Something went wrong :( a report has been sent to help fix the issue.</string>
    <string name="taskerConfigInstruction">Just click the Tick icon here to confirm. You shouldn\'t need to change the configuration string.</string>
    <string name="taskerConfiguration">Tasker Configuration</string>
    <string name="finish_preferences_activity">finish_preferences_activity</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_alert_list">Alert List</string>
    <string name="speaktreatment">Speak treatment</string>
    <string name="title_activity_update">xDrip+ Update Available</string>
    <string name="title_activity_display_qrcode">Share Settings Via QR code</string>
    <string name="title_activity_send_feed_back">Send Feedback to Jamorham</string>
    <string name="title_activity_maps">Parakeet Map</string>
    <string name="title_activity_display_preferences">Display Preferences</string>
    <string name="export_submenu">Import / Export features</string>
    <string name="action_resend_to_watch">Resend glucose to watch</string>
    <string name="action_open_watch_setting">Open Settings on Wear</string>
    <string name="action_sync_watch_db">Reset Wear DB</string>
    <string name="erase">Erase</string>
    <string name="interface_tips_from_start">All interface tips will show again from the start</string>
    <string name="note_button">Note Button</string>
    <string name="showcase_note_long">The Note Button now prompts for voice input.\n\nLong press on it to enter with keyboard or change options.</string>
    <string name="redo_button">Redo Button</string>
    <string name="showcase_redo">The Redo Button can step forwards through undone Treatment Simulations, Calibrations and Notes\n\nAfter 30 minutes it will hide again</string>
    <string name="undo_button">Undo Button</string>
    <string name="showcase_undo">The Undo Button can step backwards through Treatment Simulations, Calibrations and Notes\n\nAfter 30 minutes it will hide again</string>
    <string name="add_note">Add Note</string>
    <string name="blood_test">Blood Test</string>
    <string name="share">Share</string>
    <string name="title_activity_profile_editor">Treatment Profile Editor</string>
    <string name="first_use_menu_to_scan">First use the menu to scan for your BT device or change the Data Source in Settings!</string>
    <string name="first_configure_ip_address">First configure your wifi wixel reader ip addresses or parakeet url</string>
    <string name="now_start_your_sensor">Now start your sensor or check Settings</string>
    <string name="please_wait_while_sensor_warms_up">Please wait while sensor warms up! (</string>
    <string name="minutes_with_bracket">" minutes)"</string>
    <string name="possible_bad_calibration">Possible bad calibration slope, please have a glass of water, wash hands, then recalibrate in a few!</string>
    <string name="please_wait_need_two_readings_first">Please wait, need 2 readings from transmitter first.</string>
    <string name="please_enter_two_calibrations_to_get_started">Please enter two calibrations to get started!</string>
    <string name="now_pair_with_your_dexcom_share">Now pair with your Dexcom Share</string>
    <string name="now_choose_start_sensor_in_settings">Now choose start your sensor in your settings</string>
    <string name="double_check_dex_receiver_serial_number">Double Check Dex Receiver Serial Number, should be 10 characters, don\'t forget the letters</string>
    <string name="please_set_dex_receiver_serial_number">Please set your Dex Receiver Serial Number in App Settings</string>
    <string name="unfortunately_andoird_version_no_blueooth_low_energy">Unfortunately your android version does not support Bluetooth Low Energy</string>
    <string name="waiting_for_packet">Waiting for packet</string>
    <string name="persistent_high_for_greater_than">Persistent High for > </string>
    <string name="space_mins">" mins"</string>
    <string name="till">till</string>
    <string name="low_predicted">Low predicted</string>
    <string name="in">in</string>
    <string name="yes_enter_setup_mode">Yes enter setup mode</string>
    <string name="nokeep_parakeet_as_it_is">No keep Parakeet as it is</string>
    <string name="are_you_sure_you_want_switch_parakeet_to_setup">Are you sure you want to switch the Parakeet to setup mode?\n\nNormally this is only used to send further text messages to the Parakeet to reconfigure the transmitter it listens for etc.</string>
    <string name="split_delete_or_do_nothing">Split, delete or do nothing</string>
    <string name="split_this_block_in_two">Split this block in two</string>
    <string name="delete_this_time_block">Delete this time block</string>
    <string name="cancel_do_nothing">Cancel - do nothing</string>
    <string name="added">Added</string>
    <string name="checking_for_update">Checking for update..</string>
    <string name="signal_missed">Signal Missed</string>
    <string name="space_minutes_ago">" Minutes ago"</string>
    <string name="space_minute_ago">" Minute ago"</string>
    <string name="show_parakeet_map">Show Parakeet map</string>
    <string name="switch_parakeet_to_setup_mode">Switch Parakeet to Setup mode</string>
    <string name="view_events_log">View Events Log</string>
    <string name="share_config_via_qr_code">Share config via QR code</string>
    <string name="check_for_updated_version">Check for updated version</string>
    <string name="send_feedback_to_developer">Send Feedback to developer</string>
    <string name="home_screen">Home Screen</string>
    <string name="calibration_graph">Calibration Graph</string>
    <string name="glucose_units">Glucose Units</string>
    <string name="speak_readings">Speak Readings</string>
    <string name="crowd_sourced_translation">Crowd-sourced translation</string>
    <string name="add_treatment">Add Treatment</string>
</resources>