<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_treatment"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:onClick="startAddTreatmentDialog"
        android:orderInCategory="1"
        android:title="@string/add_treatment"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/showhelp"
        android:title="Show Help"
        android:checkable="false"
        android:orderInCategory="1"
        android:visible="false"
        android:onClick="showHelpFromMenu"
        app:showAsAction="never"/>

    <item android:id="@+id/showreminders"
        android:title="Reminders"
        android:checkable="false"
        android:orderInCategory="1"
        android:visible="false"
        android:onClick="showRemindersFromMenu"
        app:showAsAction="never"/>

    <item android:id="@+id/export_submenu"
        android:title="@string/export_submenu"
        android:orderInCategory="1">

        <menu>
    <item android:id="@+id/action_export_database"
        android:title="@string/menu_export_database"
        android:checkable="false"
        android:orderInCategory="1"
        app:showAsAction="never"/>

    <item android:id="@+id/action_import_db"
        android:title="@string/menu_import_db"
        android:checkable="false"
        android:orderInCategory="1"
        app:showAsAction="never"/>

    <item android:id="@+id/action_export_csv_sidiary"
        android:title="@string/menu_export_csv_sidiary"
        android:checkable="false"
        android:orderInCategory="1"
        app:showAsAction="never"/>

    <item android:id="@+id/importsettings"
        android:title="Load / Save Settings on sdcard"
        android:checkable="false"
        android:onClick="settingsSDcardExport"
        android:visible="true"
        android:orderInCategory="1"
        app:showAsAction="never"/>
</menu>
    </item>
    <item android:id="@+id/showmap"
        android:title="@string/show_parakeet_map"
        android:checkable="false"
        android:onClick="showMapFromMenu"
        android:visible="true"
        android:orderInCategory="1"
        app:showAsAction="never"/>

    <item android:id="@+id/parakeetsetup"
        android:title="@string/switch_parakeet_to_setup_mode"
        android:checkable="false"
        android:onClick="parakeetSetupMode"
        android:visible="true"
        android:orderInCategory="1"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_resend_last_bg"
        android:orderInCategory="100"
        android:title="@string/action_resend_to_watch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_watch_settings"
        android:orderInCategory="100"
        android:title="@string/action_open_watch_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sync_watch_db"
        android:orderInCategory="100"
        android:title="@string/action_sync_watch_db"
        app:showAsAction="never" />


    <item android:id="@+id/deleteAllBG"
        android:title="Delete All BG readings"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="deleteAllBG"
        android:visible="false"
        app:showAsAction="never"/>

    <item android:id="@+id/testFeature"
        android:title="Debugging test feature"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="testFeature"
        android:visible="false"
        app:showAsAction="never"/>

    <item android:id="@+id/crowdtranslate"
        android:title="@string/crowd_sourced_translation"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="crowdTranslate"
        android:visible="true"
        app:showAsAction="never"/>

    <item android:id="@+id/userEvents"
        android:title="@string/view_events_log"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="viewEventLog"
        android:visible="true"
        app:showAsAction="never"/>


    <item android:id="@+id/synctreatments"
        android:title="Sync Treatments"
        android:checkable="false"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="never"/>

    <item android:id="@+id/sharemyconfig"
        android:title="@string/share_config_via_qr_code"
        android:icon="@drawable/ic_qrcode_grey600_48dp"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="shareMyConfig"
        app:showAsAction="never"/>

    <item android:id="@+id/sendbackfill"
        android:title="Send BG readings to backfill"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="doBackFillBroadcast"
        android:visible="false"
        app:showAsAction="never"/>

    <item android:id="@+id/checkforupdate"
        android:title="@string/check_for_updated_version"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="checkForUpdate"
        app:showAsAction="never"/>

    <item android:id="@+id/sendfeedback"
        android:title="@string/send_feedback_to_developer"
        android:checkable="false"
        android:orderInCategory="1"
        android:onClick="sendFeedback"
        app:showAsAction="never"/>

    <item android:id="@+id/action_toggle_speakreadings"
        android:title="@string/speak_readings"
        android:checkable="true"
        android:orderInCategory="2"
        android:visible="false"
        app:showAsAction="never"/>
</menu>